--- a/resume/index.html
+++ b/resume/index.html
@@ -49,7 +49,7 @@
             </a>
           </div>
           <!-- END: Online Portfolio -->
-          <span class="hidden md:inline">|</span>
+          <span class="hidden print:inline md:inline">|</span>
           <!-- START: Linked In -->
           <a href="https://www.linkedin.com/in/harvanchik" target="_blank" class="flex flex-row gap-x-1">
             <i class="my-auto fa-brands fa-linkedin-in"></i>
@@ -90,77 +90,73 @@
       <!-- END: Education -->
 
       <!-- START: Related Courses -->
-      <template x-cloak x-show="version === '1'">
-        <section id="related-courses">
-          <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Related Courses </h2>
-          <div class="flex flex-col gap-y-1.5">
-            <ul class="w-full ml-4 list-disc columns-2 gap-x-20">
-              <li class="min-w-max">
-                <span class="hidden min-w-max xs:inline">Object-Oriented Programming</span>
-                <span class="xs:hidden">Object Oriented Program.</span>
-                <span class="italic"> | Java</span>
-              </li>
-              <li class="min-w-max">
-                <span>Data Structures</span>
-                <span class="italic"> | C++</span>
-              </li>
-              <li class="min-w-max">
-                <span>Video Game Design</span>
-                <span class="italic"> | Unity/C#</span>
-              </li>
-              <li class="min-w-max">Calculus I, II, III</li>
-              <li class="min-w-max">Statistics & Discrete Math</li>
-              <li class="hidden min-w-max xs:list-item"> Visual Basic for Applications </li>
-              <li class="min-w-max xs:hidden">Visual Basic for Apps.</li>
-            </ul>
-          </div>
-        </section>
-      </template>
+      <section x-cloak x-show="version === '1'" id="related-courses">
+        <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Related Courses </h2>
+        <div class="flex flex-col gap-y-1.5">
+          <ul class="w-full ml-4 list-disc columns-2 gap-x-20">
+            <li class="min-w-max">
+              <span class="hidden min-w-max xs:inline">Object-Oriented Programming</span>
+              <span class="xs:hidden">Object Oriented Program.</span>
+              <span class="italic"> | Java</span>
+            </li>
+            <li class="min-w-max">
+              <span>Data Structures</span>
+              <span class="italic"> | C++</span>
+            </li>
+            <li class="min-w-max">
+              <span>Video Game Design</span>
+              <span class="italic"> | Unity/C#</span>
+            </li>
+            <li class="min-w-max">Calculus I, II, III</li>
+            <li class="min-w-max">Statistics & Discrete Math</li>
+            <li class="hidden min-w-max xs:list-item"> Visual Basic for Applications </li>
+            <li class="min-w-max xs:hidden">Visual Basic for Apps.</li>
+          </ul>
+        </div>
+      </section>
       <!-- END: Related Courses -->
 
       <!-- START: Technical Skills -->
-      <template x-cloak x-show="version === '1'">
-        <section id="technical-skills">
-          <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Technical Skills </h2>
-          <div class="flex flex-col gap-y-1.5">
-            <ul class="w-full ml-4 list-disc columns-2 gap-x-20">
-              <li>
-                <span class="font-bold">Languages:</span>
-                <a href="https://www.java.com" target="_blank">Java,</a>
-                <a href="https://www.javascript.com" target="_blank">JavaScript,</a>
-                <a href="https://www.typescriptlang.org" target="_blank">TypeScript,</a>
-                <a href="http://www.cplusplus.org" target="_blank">C++,</a>
-                <span>SQL,</span>
-                <span>HTML,</span>
-                <span>CSS</span>
-              </li>
-              <li>
-                <span class="font-bold">Tech:</span>
-                <a href="https://angular.io" target="_blank">Angular,</a>
-                <a href="https://alpinejs.dev" target="_blank">Alpine,</a>
-                <a href="https://gulpjs.com" target="_blank">Gulp,</a>
-                <a href="https://www.mysql.com" target="_blank">MySQL,</a>
-                <span>REST,</span>
-                <a href="https://spring.io" target="_blank">Spring</a>
-              </li>
-              <li>
-                <span class="font-bold">Operating Systems:</span>
-                <a href="https://www.microsoft.com/windows" target="_blank">Windows,</a>
-                <a href="https://www.apple.com/mac" target="_blank">Mac,</a>
-                <a href="https://git-scm.com" target="_blank">Git,</a>
-                <a href="https://github.com" target="_blank">Github,</a>
-                <a href="https://desktop.github.com" target="_blank">Github Desktop</a>
-              </li>
-              <li>
-                <span class="font-bold">Other:</span>
-                <a href="https://www.office.com" target="_blank">Microsoft Office,</a>
-                <a href="https://workspace.google.com/features" target="_blank">Google Sheets/Docs/Slides,</a>
-                <a href="https://www.adobe.com/creativecloud.html" target="_blank">Adobe Products</a>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </template>
+      <section x-cloak x-show="version === '1'" id="technical-skills">
+        <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Technical Skills </h2>
+        <div class="flex flex-col gap-y-1.5">
+          <ul class="w-full ml-4 list-disc columns-2 gap-x-20">
+            <li>
+              <span class="font-bold">Languages:</span>
+              <a href="https://www.java.com" target="_blank">Java,</a>
+              <a href="https://www.javascript.com" target="_blank">JavaScript,</a>
+              <a href="https://www.typescriptlang.org" target="_blank">TypeScript,</a>
+              <a href="http://www.cplusplus.org" target="_blank">C++,</a>
+              <span>SQL,</span>
+              <span>HTML,</span>
+              <span>CSS</span>
+            </li>
+            <li>
+              <span class="font-bold">Tech:</span>
+              <a href="https://angular.io" target="_blank">Angular,</a>
+              <a href="https://alpinejs.dev" target="_blank">Alpine,</a>
+              <a href="https://gulpjs.com" target="_blank">Gulp,</a>
+              <a href="https://www.mysql.com" target="_blank">MySQL,</a>
+              <span>REST,</span>
+              <a href="https://spring.io" target="_blank">Spring</a>
+            </li>
+            <li>
+              <span class="font-bold">Operating Systems:</span>
+              <a href="https://www.microsoft.com/windows" target="_blank">Windows,</a>
+              <a href="https://www.apple.com/mac" target="_blank">Mac,</a>
+              <a href="https://git-scm.com" target="_blank">Git,</a>
+              <a href="https://github.com" target="_blank">Github,</a>
+              <a href="https://desktop.github.com" target="_blank">Github Desktop</a>
+            </li>
+            <li>
+              <span class="font-bold">Other:</span>
+              <a href="https://www.office.com" target="_blank">Microsoft Office,</a>
+              <a href="https://workspace.google.com/features" target="_blank">Google Sheets/Docs/Slides,</a>
+              <a href="https://www.adobe.com/creativecloud.html" target="_blank">Adobe Products</a>
+            </li>
+          </ul>
+        </div>
+      </section>
       <!-- END: Technical Skills -->
 
       <!-- START: Work Experience -->
@@ -168,7 +164,7 @@
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase"> Work Experience </h2>
         <div class="flex flex-col gap-y-1.5">
           <!-- START: DiD Integration -->
-          <div class="flex flex-col gap-y-1">
+          <div x-cloak x-show="version === '1'" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Junior Software Developer</p>
@@ -213,28 +209,23 @@
             </ul>
           </div>
           <!-- END: Residential Advisor -->
-          <!-- TODO: Conditionally display this based on url parameters -->
           <!-- START: Summer Camp Counselor -->
-          <template x-cloak x-show="version === '2'">
-            <div class="flex flex-col gap-y-1">
-              <div class="flex flex-row justify-between">
-                <div class="flex flex-col">
-                  <p class="font-bold">Summer Camp Counselor</p>
-                  <a href="https://www.cadence-education.com/locations/ca/valencia/651" target="_blank" class="italic">
-                    Cadence Academy (Sunshine)
-                  </a>
-                </div>
-                <div class="flex flex-col text-right min-w-max">
-                  <p class="hidden xs:inline">June 2019 - August 2019</p>
-                  <p class="xs:hidden">June '19 - Aug. '19</p>
-                  <p>Valencia, CA</p>
-                </div>
+          <div x-cloak x-show="version === '2'" class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Summer Camp Counselor</p>
+                <a href="https://www.cadence-education.com/locations/ca/valencia/651" target="_blank" class="italic"> Cadence Academy (Sunshine) </a>
               </div>
-              <ul class="ml-4 list-disc">
-                <li></li>
-              </ul>
+              <div class="flex flex-col text-right min-w-max">
+                <p class="hidden xs:inline">June 2019 - August 2019</p>
+                <p class="xs:hidden">June '19 - Aug. '19</p>
+                <p>Valencia, CA</p>
+              </div>
             </div>
-          </template>
+            <ul class="ml-4 list-disc">
+              <li></li>
+            </ul>
+          </div>
           <!-- END: Summer Camp Counselor -->
           <!-- START: Intramural Sports Supervisor -->
           <div class="flex flex-col gap-y-1">
@@ -253,11 +244,11 @@
               <li> Officiated basketball, flag football, softball, volleyball, soccer, and floor hockey </li>
               <li> Trained new officials in various sports by giving presentations on the rules </li>
               <li> Addressed unruly players, teams, or crowds when the officials were overwhelmed </li>
-              <li>
+              <!-- <li>
                 <span>Travelled out-of-state to officiate</span>
                 <a href="https://nirsa.net" target="_blank" class="underline print:no-underline">NIRSA</a>
                 <span>sanctioned tournaments</span>
-              </li>
+              </li> -->
             </ul>
           </div>
           <!-- END: Intramural Sports Supervisor -->
@@ -265,65 +256,62 @@
       </section>
       <!-- END: Work Experience -->
       <!-- START: Projects -->
-      <template x-cloak x-show="version === '1'">
-        <section id="projects">
-          <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Projects </h2>
-          <div class="flex flex-col gap-y-1.5">
-            <!-- START: Blockey Hockey -->
-            <div class="flex flex-col gap-y-1">
-              <div class="flex flex-row justify-between">
-                <div class="flex flex-col">
-                  <p class="font-bold">Blockey Hockey</p>
-                  <p class="italic"> Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, Github Pages </p>
-                </div>
-                <div class="flex flex-col text-right min-w-max">
-                  <p class="hidden xs:inline">Since December 2014</p>
-                  <p class="xs:hidden">Since Dec. '14</p>
-                </div>
+      <section x-cloak x-show="version === '1'" id="projects">
+        <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Projects </h2>
+        <div class="flex flex-col gap-y-1.5">
+          <!-- START: Blockey Hockey -->
+          <div class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Blockey Hockey</p>
+                <p class="italic"> Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, Github Pages </p>
               </div>
-              <ul class="ml-4 list-disc">
-                <li>
-                  <span>What started out as a simple command block-based</span>
-                  <a href="https://www.minecraft.net" target="_blank" class="underline print:no-underline"> Minecraft</a>
-                  <span>mini-game,</span>
-                  <a href="https://youtu.be/n7iLQbPl4Rg" target="_blank" class="underline print:no-underline"> Blockey Hockey</a>
-                  <span>has evolved into a full-stack, Java-developed Minecraft plugin using the</span>
-                  <a href="https://papermc.io" target="_blank" class="underline print:no-underline"> Spigot/Paper API.</a>
-                  <span>Today, the game is accompanied by a</span>
-                  <a href="https://blockeyhockey.net" target="_blank" class="underline print:no-underline">website</a>
-                  <span>and has fully automated, in-game </span>
-                  <a href="https://blockeyhockey.net/scores" target="_blank" class="underline print:no-underline">stat tracking.</a>
-                </li>
-              </ul>
-            </div>
-            <!-- END: Blockey Hockey -->
-            <!-- START: Greenhouse -->
-            <div class="flex flex-col gap-y-1">
-              <div class="flex flex-row justify-between">
-                <div class="flex flex-col">
-                  <p class="font-bold">Drag and Drop Greenhouse</p>
-                  <p class="italic">
-                    Technologies: Angular, TypeScript, HTML, CSS,
-                    <a href="https://github.com/tiberiuzuld/angular-gridster2" target="_blank">Gridster API</a>
-                  </p>
-                </div>
-                <div class="flex flex-col text-right min-w-max">
-                  <p class="hidden xs:inline">August - November 2021</p>
-                  <p class="xs:hidden">Aug. - Nov. '21</p>
-                </div>
+              <div class="flex flex-col text-right min-w-max">
+                <p class="hidden xs:inline">Since December 2014</p>
+                <p class="xs:hidden">Since Dec. '14</p>
               </div>
-              <ul class="ml-4 list-disc">
-                <li>
-                  While working at DiD Integration Inc., a client requested a solution for their inventory management/location problem. The goal was
-                  to programmatically manage hundreds of greenhouses by importing pallets with the ability to reorder the pallets by dragging and
-                  dropping. Ease-of-use and efficiency was a top priority.
-                </li>
-              </ul>
             </div>
-            <!-- END: Greenhouse -->
+            <ul class="ml-4 list-disc">
+              <li>
+                <span>What started out as a simple command block-based</span>
+                <a href="https://www.minecraft.net" target="_blank" class="underline print:no-underline"> Minecraft</a>
+                <span>mini-game,</span>
+                <a href="https://youtu.be/n7iLQbPl4Rg" target="_blank" class="underline print:no-underline"> Blockey Hockey</a>
+                <span>has evolved into a full-stack, Java-developed Minecraft plugin using the</span>
+                <a href="https://papermc.io" target="_blank" class="underline print:no-underline"> Spigot/Paper API.</a>
+                <span>Today, the game is accompanied by a</span>
+                <a href="https://blockeyhockey.net" target="_blank" class="underline print:no-underline">website</a>
+                <span>and has fully automated, in-game </span>
+                <a href="https://blockeyhockey.net/scores" target="_blank" class="underline print:no-underline">stat tracking.</a>
+              </li>
+            </ul>
           </div>
-        </section>
-      </template>
+          <!-- END: Blockey Hockey -->
+          <!-- START: Greenhouse -->
+          <div class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Drag and Drop Greenhouse</p>
+                <p class="italic">
+                  Technologies: Angular, TypeScript, HTML, CSS,
+                  <a href="https://github.com/tiberiuzuld/angular-gridster2" target="_blank">Gridster API</a>
+                </p>
+              </div>
+              <div class="flex flex-col text-right min-w-max">
+                <p class="hidden xs:inline">August - November 2021</p>
+                <p class="xs:hidden">Aug. - Nov. '21</p>
+              </div>
+            </div>
+            <ul class="ml-4 list-disc">
+              <li>
+                While working at DiD Integration Inc., a client requested a solution for their inventory management/location problem. The goal was to
+                programmatically manage hundreds of greenhouses by importing pallets with the ability to reorder the pallets by dragging and dropping.
+              </li>
+            </ul>
+          </div>
+          <!-- END: Greenhouse -->
+        </div>
+      </section>
       <!-- END: Projects -->
     </div>
     <!-- END: Page -->
