--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   </head>
 
-  <body class="bg-gray-50/70">
+  <body class="bg-gray-50/60">
     <!-- START: Navigation Bar -->
     <nav class="flex h-10">
-      <section class="flex flex-row justify-between my-auto text-lg tracking-tight layout">
+      <section class="layout my-auto flex flex-row justify-between text-lg tracking-tight">
         <div id="logo">LOGO</div>
         <ul class="flex flex-row space-x-5 font-semibold">
           <li>Home</li>
@@ -27,66 +27,50 @@
     <!-- START: Content -->
     <main class="flex-1">
       <!-- START: Hero -->
-      <section class="flex flex-col layout pt-28">
+      <section class="layout flex flex-col pt-28">
         <!-- TODO: hover over last name will open a small "dictionary looking" modal that shows how to pronounce -->
         <h1 class="w-[87%] text-5xl font-bold tracking-tight text-gray-800"
           >The name's <span class="text-indigo-600">/ˈhär-van-chik/</span>. I code things and study computer science.</h1
         >
-        <div class="flex flex-row pt-10 space-x-5 text-xl">
+        <div class="flex flex-row space-x-5 pt-10 text-xl">
           <a
             href="#"
             type="button"
-            class="py-3 font-semibold text-white transition-colors duration-150 bg-indigo-500 rounded-full shadow-md cursor-pointer select-none px-7 hover:bg-indigo-600 hover:shadow-lg active:bg-indigo-700/95 active:shadow-xl"
+            class="cursor-pointer select-none rounded-full bg-indigo-500 py-3 px-7 font-semibold text-white shadow-md transition-all duration-150 hover:bg-indigo-600 hover:shadow-lg active:translate-y-0.5 active:bg-indigo-700/95 active:shadow-xl"
             >See my work</a
           >
           <a
             href="#"
             type="button"
-            class="py-3 font-semibold text-gray-800 transition-all duration-150 bg-gray-200 rounded-full shadow-md cursor-pointer select-none active: px-7 hover:bg-gray-300 hover:shadow-lg active:bg-gray-400/60 active:shadow-xl"
+            class="active: cursor-pointer select-none rounded-full bg-gray-200 py-3 px-7 font-semibold text-gray-800 shadow-md transition-all duration-150 hover:bg-gray-300 hover:shadow-lg active:translate-y-0.5 active:bg-gray-400/60 active:shadow-xl"
             >Learn about me</a
           >
         </div>
       </section>
       <!-- END: Hero -->
 
-      <section class="flex flex-col pt-40 layout">
+      <section class="layout flex flex-col pt-40">
         <h2 class="text-4xl font-bold tracking-tight text-gray-700">Some cool things I made</h2>
         <div class="grid grid-cols-3 gap-x-7 pt-9">
           <!-- START: Card 1 -->
-          <div class="flex flex-col w-auto h-auto p-4 transition-shadow bg-gray-100 shadow-md rounded-xl hover:shadow-md">
-            <p class="text-xl font-semibold text-gray-800">portfolio-v2</p>
-            <div class="flex space-x-2 pt-2 pb-2.5 text-gray-700"
-              ><a
-                href="https://github.com/harvanchik/portfolio-v2"
-                rel="noopener noreferrer"
-                target="_blank"
-                class="hover:text-gray-900"
-                aria-label="Open GitHub repository"
-                ><svg fill="currentColor" viewBox="0 0 24 24" aria-hidden="true" class="w-6 h-6">
-                  <path
-                    fill-rule="evenodd"
-                    d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
-                    clip-rule="evenodd"></path></svg></a
-            ></div>
+          <div class="group flex h-auto w-auto flex-col space-y-3 rounded-xl bg-gray-100 p-4 shadow-md transition-shadow hover:shadow-lg">
+            <a
+              href="https://github.com/harvanchik/portfolio-v2"
+              target="_blank"
+              class="w-max text-xl font-semibold text-gray-800 transition-all duration-200 hover:text-indigo-600 group-hover:text-2xl"
+              >portfolio-v2</a
+            >
             <p class="text-[1.075rem] text-gray-700">The second version of my personal portfolio website &ndash; the site your viewing right now.</p>
           </div>
           <!-- END: Card 1 -->
           <!-- START: Card 2 -->
-          <div class="flex flex-col w-auto h-auto p-4 transition-shadow bg-gray-100 shadow-sm rounded-xl hover:shadow-md">
-            <p class="text-xl font-semibold text-gray-800">tailwind-template</p>
-            <div class="flex space-x-2 pt-2 pb-2.5 text-gray-700"
-              ><a
-                href="https://github.com/harvanchik/tailwind-template"
-                rel="noopener noreferrer"
-                target="_blank"
-                class="hover:text-gray-900"
-                aria-label="Open GitHub repository"
-                ><svg fill="currentColor" viewBox="0 0 24 24" aria-hidden="true" class="w-6 h-6">
-                  <path
-                    fill-rule="evenodd"
-                    d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
-                    clip-rule="evenodd"></path></svg></a
-            ></div>
+          <div class="group flex h-auto w-auto flex-col space-y-3 rounded-xl bg-gray-100 p-4 shadow-md transition-shadow hover:shadow-lg">
+            <a
+              href="https://github.com/harvanchik/tailwind-template"
+              target="_blank"
+              class="duration-200group- w-max text-xl font-semibold text-gray-800 transition-all hover:text-2xl hover:text-indigo-600 group-hover:text-2xl"
+              >tailwind-template</a
+            >
             <p class="text-[1.075rem] text-gray-700"
               >A static site template that uses <a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a> and
               <a href="https://gulpjs.com/" target="_blank">Gulp</a> making getting started quick and painless.
@@ -94,27 +78,22 @@
           </div>
           <!-- END: Card 2 -->
           <!-- START: Card 3 -->
-          <div class="flex flex-col w-auto h-auto p-4 transition-shadow bg-gray-100 shadow-sm rounded-xl hover:shadow-md">
-            <p class="text-xl font-semibold text-gray-800">blockey-hockey</p>
-            <div class="flex space-x-2 pt-2 pb-2.5 text-gray-700"
-              ><a
-                href="https://github.com/BlockeySports"
-                rel="noopener noreferrer"
-                target="_blank"
-                class="hover:text-gray-900"
-                aria-label="Open GitHub repository"
-                ><svg fill="currentColor" viewBox="0 0 24 24" aria-hidden="true" class="w-6 h-6">
-                  <path
-                    fill-rule="evenodd"
-                    d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
-                    clip-rule="evenodd"></path></svg></a
-            ></div>
+          <div class="group flex h-auto w-auto flex-col space-y-3 rounded-xl bg-gray-100 p-4 shadow-md transition-shadow hover:shadow-lg">
+            <a
+              href="https://github.com/BlockeySports"
+              target="_blank"
+              class="duration-200group- w-max text-xl font-semibold text-gray-800 transition-all hover:text-2xl hover:text-indigo-600 group-hover:text-2xl"
+              >blockey-hockey</a
+            >
             <p class="text-[1.075rem] text-gray-700">A hockey game plugin, website, and back-end project that dates back to 2014.</p>
           </div>
           <!-- END: Card 3 -->
         </div>
-        <div class="flex pt-5 ml-auto text-lg">
-          <a href="https://github.com/harvanchik?tab=repositories" target="_blank" class="hover:text-indigo-600 hover:underline"
+        <div class="ml-auto flex pt-5 text-lg">
+          <a
+            href="https://github.com/harvanchik?tab=repositories"
+            target="_blank"
+            class="link-underline transition-all duration-200 hover:text-indigo-600"
             >View all my projects</a
           >
         </div>
