--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
   <body class="bg-gray-50/60">
     <!-- START: Navigation Bar -->
-    <nav class="flex h-10">
-      <section class="layout my-auto flex flex-row justify-between text-lg tracking-tight">
+    <nav class="flex h-20">
+      <section class="flex flex-row justify-between my-auto text-lg layout">
         <div id="logo">LOGO</div>
-        <ul class="flex flex-row space-x-5 font-semibold">
-          <li>Home</li>
-          <li>About Me</li>
-          <li>My Work</li>
-          <li>Contact Me</li>
+        <ul class="flex flex-row space-x-5 font-bold">
+          <li><a href="#" class="text-indigo-600 transition-all duration-200 link-underline">Home</a></li>
+          <li><a href="#" class="transition-all duration-200 link-underline hover:text-indigo-600">About Me</a></li>
+          <li><a href="#" class="transition-all duration-200 link-underline hover:text-indigo-600">My Work</a></li>
+          <li><a href="#" class="transition-all duration-200 link-underline hover:text-indigo-600">Contact Me</a></li>
         </ul>
       </section>
     </nav>
@@ -28,12 +28,12 @@
     <!-- START: Content -->
     <main class="flex-1">
       <!-- START: Hero -->
-      <section class="layout flex flex-col pt-32">
+      <section class="flex flex-col pt-32 layout">
         <!-- TODO: hover over last name will open a small "dictionary looking" modal that shows how to pronounce -->
         <h1 class="w-[87%] text-5xl font-bold tracking-tight text-gray-800"
           >The name's <span class="text-indigo-600">/ˈhär-van-chik/</span>. I code things and study computer science.</h1
         >
-        <div class="flex flex-row space-x-5 pt-10 text-xl">
+        <div class="flex flex-row pt-10 space-x-5 text-xl">
           <a
             href="#"
             type="button"
@@ -50,26 +50,27 @@
       </section>
       <!-- END: Hero -->
 
-      <section class="layout flex flex-col pt-44">
+      <!-- START: Projects -->
+      <section class="flex flex-col layout pt-44">
         <h2 class="text-4xl font-bold tracking-tight text-gray-700">Some cool things I made</h2>
         <div class="grid grid-cols-3 gap-x-7 pt-9">
           <!-- START: Card 1 -->
-          <div class="group flex h-auto w-auto flex-col space-y-3 rounded-xl bg-gray-100 p-4 shadow-md transition-shadow hover:shadow-lg">
+          <div class="flex flex-col w-auto h-auto p-4 space-y-3 transition-shadow bg-gray-100 shadow-md group rounded-xl hover:shadow-lg">
             <a
               href="https://github.com/harvanchik/portfolio-v2"
               target="_blank"
-              class="w-max text-xl font-semibold text-gray-800 transition-all duration-200 hover:text-indigo-600 group-hover:text-2xl"
+              class="text-xl font-semibold text-gray-800 transition-all duration-200 w-max hover:text-indigo-600 group-hover:text-2xl"
               >portfolio-v2</a
             >
             <p class="text-[1.075rem] text-gray-700">The second version of my personal portfolio website &ndash; the site your viewing right now.</p>
           </div>
           <!-- END: Card 1 -->
           <!-- START: Card 2 -->
-          <div class="group flex h-auto w-auto flex-col space-y-3 rounded-xl bg-gray-100 p-4 shadow-md transition-shadow hover:shadow-lg">
+          <div class="flex flex-col w-auto h-auto p-4 space-y-3 transition-shadow bg-gray-100 shadow-md group rounded-xl hover:shadow-lg">
             <a
               href="https://github.com/harvanchik/tailwind-template"
               target="_blank"
-              class="duration-200group- w-max text-xl font-semibold text-gray-800 transition-all hover:text-2xl hover:text-indigo-600 group-hover:text-2xl"
+              class="text-xl font-semibold text-gray-800 transition-all duration-200group- w-max hover:text-2xl hover:text-indigo-600 group-hover:text-2xl"
               >tailwind-template</a
             >
             <p class="text-[1.075rem] text-gray-700"
@@ -79,26 +80,47 @@
           </div>
           <!-- END: Card 2 -->
           <!-- START: Card 3 -->
-          <div class="group flex h-auto w-auto flex-col space-y-3 rounded-xl bg-gray-100 p-4 shadow-md transition-shadow hover:shadow-lg">
+          <div class="flex flex-col w-auto h-auto p-4 space-y-3 transition-shadow bg-gray-100 shadow-md group rounded-xl hover:shadow-lg">
             <a
               href="https://github.com/BlockeySports"
               target="_blank"
-              class="duration-200group- w-max text-xl font-semibold text-gray-800 transition-all hover:text-2xl hover:text-indigo-600 group-hover:text-2xl"
+              class="text-xl font-semibold text-gray-800 transition-all duration-200group- w-max hover:text-2xl hover:text-indigo-600 group-hover:text-2xl"
               >blockey-hockey</a
             >
             <p class="text-[1.075rem] text-gray-700">A hockey game plugin, website, and back-end project that dates back to 2014.</p>
           </div>
           <!-- END: Card 3 -->
         </div>
-        <div class="ml-auto flex pt-5 text-lg">
+        <div class="flex pt-5 ml-auto text-lg">
           <a
             href="https://github.com/harvanchik?tab=repositories"
             target="_blank"
-            class="link-underline transition-all duration-200 hover:text-indigo-600"
+            class="transition-all duration-200 link-underline hover:text-indigo-600"
             >View all my projects</a
           >
         </div>
       </section>
+      <!-- END: Projects -->
+
+      <!-- START: Footer -->
+      <section class="pb-20 layout pt-44">
+        <div class="flex flex-col space-y-8">
+          <!-- START: Bottom Nav -->
+          <ul class="flex flex-row space-x-5 text-lg font-semibold">
+            <li><a href="#" class="transition-all duration-200 link-underline hover:text-indigo-600">Home</a></li>
+            <li><a href="#" class="transition-all duration-200 link-underline hover:text-indigo-600">About Me</a></li>
+            <li><a href="#" class="transition-all duration-200 link-underline hover:text-indigo-600">My Work</a></li>
+            <li><a href="#" class="transition-all duration-200 link-underline hover:text-indigo-600">Contact Me</a></li>
+          </ul>
+          <!-- END: Bottom Nav -->
+          <hr class="h-0.5 w-full bg-indigo-600" />
+          <div class="flex flex-row justify-between">
+            <!-- TODO: update based on current year -->
+            <p class="font-medium font-inter">&copy; 2022 Jake Harvanchik. All Rights Reserved.</p>
+          </div>
+        </div>
+      </section>
+      <!-- END: Footer -->
     </main>
     <!-- END: Content -->
   </body>
