--- a/resume/index.html
+++ b/resume/index.html
@@ -147,6 +147,8 @@
               <span class="font-bold">Tech:</span>
               <a href="https://angular.io" target="_blank">Angular,</a>
               <a href="https://alpinejs.dev" target="_blank">Alpine,</a>
+              <a href="https://vuejs.org/" target="_blank">VueJS,</a>
+              <a href="https://v3.nuxtjs.org/" target="_blank">Nuxt3,</a>
               <a href="https://gulpjs.com" target="_blank">Gulp,</a>
               <a href="https://www.mysql.com" target="_blank">MySQL,</a>
               <a href="https://spring.io" target="_blank">Spring,</a>
@@ -157,16 +159,16 @@
               <a href="https://www.microsoft.com/windows" target="_blank">Windows,</a>
               <a href="https://www.apple.com/mac" target="_blank">Mac,</a>
               <a href="https://git-scm.com" target="_blank">Git,</a>
-              <a href="https://github.com" target="_blank">Github,</a>
-              <a href="https://desktop.github.com" target="_blank">Github Desktop,</a>
+              <a href="https://github.com" target="_blank">GitHub,</a>
+              <a href="https://desktop.giHub.com" target="_blank">GitHub Desktop,</a>
               <a href="https://www.heroku.com" target="_blank">Heroku</a>
             </li>
             <li>
               <span class="font-bold">Other:</span>
               <a href="https://code.visualstudio.com/" target="_blank">VS Code,</a>
               <a href="https://www.jetbrains.com/idea/" target="_blank">IntelliJ,</a>
+              <a href="https://workspace.google.com/features" target="_blank">Google Workspace,</a>
               <a href="https://www.office.com" target="_blank">Microsoft Office,</a>
-              <a href="https://workspace.google.com/features" target="_blank">Google Sheets/Docs/Slides,</a>
               <a href="https://www.adobe.com/creativecloud.html" target="_blank">Adobe Products</a>
             </li>
           </ul>
@@ -327,7 +329,7 @@
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Blockey Hockey</p>
-                <p class="italic"> Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, Github Pages </p>
+                <p class="italic"> Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, GitHub Pages </p>
               </div>
               <div class="flex flex-col text-right min-w-max">
                 <p class="hidden xs:inline">Since December 2014</p>
